<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginBottom="30dp"
            android:text="@string/button_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:background="#C44CAF50"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_current"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/current_text"
                android:textSize="27dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/current"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="50dp"
                android:paddingTop="10dp"
                android:text="@string/current_publicated"
                android:textSize="27dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:background="#BE03A9F4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_min"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/min_text"
                android:textSize="27dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/min"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="60dp"
                android:paddingTop="10dp"
                android:text="@string/min_publicated"
                android:textSize="27dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:background="#D5FFEB3B"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_max"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/max_text"
                android:textSize="27dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/max"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="60dp"
                android:paddingTop="10dp"
                android:text="@string/max_publicated"
                android:textSize="27dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:background="#D2F44336"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_weather"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/weather_text"
                android:textSize="27dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/weather"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="50dp"
                android:paddingTop="10dp"
                android:text="@string/weather_publicated"
                android:textSize="27dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/icon_image"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_marginTop="30dp"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/go_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="8dp"
            android:text="Button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>